--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,10 @@
             <id>minecraft-repo</id>
             <url>https://libraries.minecraft.net/</url>
         </repository>
+        <repository>
+            <id>xyris-repo</id>
+            <url>https://repo.xyrisdev.com/repository/maven-public</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -43,7 +47,7 @@
         <dependency>
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
-            <version>2.11.1</version>
+            <version>2.11.6</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -63,6 +67,11 @@
             <artifactId>HikariCP</artifactId>
             <version>4.0.3</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.xyrisdev</groupId>
+            <artifactId>scheduler</artifactId>
+            <version>1.0</version>
         </dependency>
     </dependencies>
 
@@ -97,6 +106,10 @@
                                     <includes>
                                         <include>com.zaxxer.hikari.**</include>
                                     </includes>
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.xyrisdev.library.scheduler</pattern>
+                                    <shadedPattern>pk.ajneb97.libs.scheduler</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
