--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
     </dependencies>
 
     <build>
+        <finalName>${project.artifactId}-${project.version}-Folia</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
